@@ -143,6 +143,8 @@ v3.4.1 (2018-12-19)
     options, such as `--version`, `--dump-options`, `--dump-dependencies` etc.,
     and "option" for all others.
 
+* Fixed a bug in synchroneous replication intialisation for, where a
+  shard's db server is rebooted during that period
 
 v3.4.0 (2018-12-06)
 -------------------
